<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TampilActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="192dp"
            android:layout_height="192dp"
            app:srcCompat="@drawable/cover_default" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvJudulLagu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/judul_lagu"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvArtis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/artis"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/xtra_large_margin"
        app:cardCornerRadius="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="2dp"
                    android:text="@string/album_lagu" />

                <TextView
                    android:id="@+id/tvAlbumLagu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:text="@string/album_lagu"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/tahun" />

                <TextView
                    android:id="@+id/tvTahun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:text="@string/tahun"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/negara" />

                <TextView
                    android:id="@+id/tvNegara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:text="@string/negara"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/publisher" />

                <TextView
                    android:id="@+id/tvPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:text="@string/publisher"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/large_margin"
                    android:text="@string/genre"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>